compiler/testData/diagnostics/tests/secondaryConstructors/redeclarationsOfConstructorsIgnored.fir.kt
class <!CLASSIFIER_REDECLARATION!>A<!>
class <!CLASSIFIER_REDECLARATION!>A<!> {
    constructor()
}

class B
class Outer {
    class B {
        constructor()
    }
}
